--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,41 @@
 <my-app>loading</my-app>
 
-<footer id="rotatingFooter"></footer>
+<footer
+  style="
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background: #0c1020;
+    color: #fff;
+    text-align: center;
+    padding: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    zindex: 9999;
+  "
+>
+  <img
+    src="https://webdevunlimited.tech/images/favicon.png"
+    style="width: 15px"
+  />
+  <a
+    rel="noopener noreferrer"
+    href="https://webdevunlimited.tech/"
+    target="_blank"
+    ;
+    style="color: white; text-decoration: none; font: normal 14px sans-serif"
+    >Learn How to Build Websites</a
+  >
+</footer>
 
 <!-- Footer -->
 <script>
-  const footer = document.getElementById('rotatingFooter');
+  // const footer = document.getElementById('rotatingFooter');
 
   const footerItems = [
-    {
-      img: 'https://webdevunlimited.tech/images/amazon-logo.png',
-      text: 'CMSs, E-Commerce Tools, & Website Builders Explained',
-      link: 'https://tinyurl.com/3m5hyrk5',
-    },
     {
       img: 'https://webdevunlimited.tech/images/favicon.png',
       text: 'Web Dev Unlimited',
@@ -46,18 +70,19 @@
   textLink.style.textDecoration = 'none';
   textLink.style.fontSize = '.9rem';
 
-  footer.appendChild(img);
-  footer.appendChild(textLink);
+  img.src = 'https://webdevunlimited.tech/images/favicon.png';
+  textLink.href = 'https://webdevunlimited.tech/';
+  textLink.textContent = 'Learn How to Build Websites';
+  textLink.target = '_blank';
 
-  function showRandomItem() {
-    const item = footerItems[Math.floor(Math.random() * footerItems.length)];
-    img.src = item.img;
-    textLink.href = item.link;
-    textLink.textContent = item.text;
-    textLink.target = '_blank';
-    textLink.rel = 'noopener noreferrer';
-  }
+  // footer.appendChild(img);
+  // footer.appendChild(textLink);
 
-  showRandomItem();
-  setInterval(showRandomItem, 10000);
+  // function showRandomItem() {
+  //   const item = footerItems[Math.floor(Math.random() * footerItems.length)];
+
+  // }
+
+  // showRandomItem();
+  // setInterval(showRandomItem, 10000);
 </script>
