--- a/src/index.html
+++ b/src/index.html
@@ -23,66 +23,10 @@
   />
   <a
     rel="noopener noreferrer"
-    href="https://webdevunlimited.tech/"
+    href="https://webdevunlimited.tech/content-management-systems.php"
     target="_blank"
     ;
     style="color: white; text-decoration: none; font: normal 14px sans-serif"
     >Learn How to Build Websites</a
   >
 </footer>
-
-<!-- Footer -->
-<script>
-  // const footer = document.getElementById('rotatingFooter');
-
-  const footerItems = [
-    {
-      img: 'https://webdevunlimited.tech/images/favicon.png',
-      text: 'Web Dev Unlimited',
-      link: 'https://webdevunlimited.tech/',
-    },
-  ];
-
-  Object.assign(footer.style, {
-    position: 'fixed',
-    bottom: '0',
-    left: '0',
-    width: '100%',
-    background: '#0c1020',
-    color: '#fff',
-    textAlign: 'center',
-    padding: '5px',
-    display: 'flex',
-    alignItems: 'center',
-    justifyContent: 'center',
-    gap: '10px',
-    zIndex: '9999',
-    fontFamily: 'sans-serif',
-  });
-
-  const img = document.createElement('img');
-  img.style.height = '25px';
-  img.style.width = 'auto';
-  img.style.borderRadius = '4px';
-
-  const textLink = document.createElement('a');
-  textLink.style.color = '#fff';
-  textLink.style.textDecoration = 'none';
-  textLink.style.fontSize = '.9rem';
-
-  img.src = 'https://webdevunlimited.tech/images/favicon.png';
-  textLink.href = 'https://webdevunlimited.tech/';
-  textLink.textContent = 'Learn How to Build Websites';
-  textLink.target = '_blank';
-
-  // footer.appendChild(img);
-  // footer.appendChild(textLink);
-
-  // function showRandomItem() {
-  //   const item = footerItems[Math.floor(Math.random() * footerItems.length)];
-
-  // }
-
-  // showRandomItem();
-  // setInterval(showRandomItem, 10000);
-</script>
