--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <my-app>loading</my-app>
 
+<!-- footer -->
 <footer
   style="
     position: fixed;
@@ -23,10 +24,10 @@
   />
   <a
     rel="noopener noreferrer"
-    href="https://webdevunlimited.tech/content-management-systems.php"
+    href="https://webdevunlimited.tech"
     target="_blank"
     ;
-    style="color: white; text-decoration: none; font: normal 14px sans-serif"
-    >Learn How to Build Websites</a
+    style="color: white; text-decoration: none; font: normal 14px sans-serif; line-height:19px"
+    >Sign up to get insights on AI, tech jobs, web development, & launching your own online business.</a
   >
 </footer>
