--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
   />
   <a
     rel="noopener noreferrer"
-    href="https://webdevunlimited.tech"
+    href="https://webdevunlimited.tech/signup.php"
     target="_blank"
     ;
     style="color: white; text-decoration: none; font: normal 14px sans-serif; line-height:19px"
