--- a/src/index.html
+++ b/src/index.html
@@ -11,23 +11,22 @@
     color: #fff;
     text-align: center;
     padding: 5px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
-    zindex: 9999;
+    z-index: 9999;
+    box-sizing: border-box;
   "
 >
-  <img
-    src="https://webdevunlimited.tech/images/favicon.png"
-    style="width: 15px"
-  />
   <a
     rel="noopener noreferrer"
     href="https://webdevunlimited.tech/signup.php"
     target="_blank"
     ;
-    style="color: white; text-decoration: none; font: normal 14px sans-serif; line-height:19px"
-    >Sign up to get insights on AI, tech jobs, web development, & launching your own online business.</a
-  >
+    style="
+      color: white;
+      text-decoration: none;
+      font: normal 14px sans-serif;
+      line-height: 19px;
+    "
+    >👉 Sign up to get insights on AI, web development tips, and practical
+    strategies for tech careers and online income.
+  </a>
 </footer>
