--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
       font: normal 14px sans-serif;
       line-height: 19px;
     "
-    >👉 Sign up to get insights on AI, web development tips, and practical
-    strategies for tech careers and online income.
+    >👉 Sign up to get insights on AI, web development tips, & practical
+    strategies for tech careers & online income.
   </a>
 </footer>
